# rustputo

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  ruff.toml
rust/: Cargo.toml
rust/models/: Cargo.toml
rust/models/src/: lib.rs
rust/models/src/biomechanics/: matlaw_general.rs  matlaw_uniaxial.rs  mod.rs  model_traits.rs
rust/models/src/biomechanics/matlaw_general/: double_e.rs  holzapfel_fiber.rs  iso_exponential.rs  linear.rs  neohookean.rs  planar_iso_linear.rs
rust/models/src/biomechanics/matlaw_uniaxial/: exponential.rs  linear.rs  neohookean.rs
rust/models/src/example/: mod.rs
rust/models/src/fractional/: caputo.rs  caputo_data.rs  mod.rs
rust/models/src/fractional/caputo/: caputo_internal.rs  caputo_ndarray.rs
rust/models/src/kinematics/: deformation.rs  mod.rs
rust/models/src/linalg/: mod.rs  utils.rs
rust/models/src/linalg/optimization/: linear.rs
rust/models/src/simulation/: mod.rs  pymodeling.rs  simulate.rs
rust/models/src/tissues_1d/: aorta.rs  simulation.rs
rust/models/src/tissues_1d/aorta/: uniaxial_model.rs
rust/models/src/tissues_3d/: neohookean.rs
rust/models/src/utils/: errors.rs
rust/models/src/viscoelasticity/: caputo.rs  caputo_data.rs  mod.rs
rust/src/: lib.rs
rust/src/biomechanics/: constitutive.rs  hydrostatics.rs  hyperelasticity.rs  kinematics.rs  matlaw_general.rs  matlaw_uniaxial.rs  mod.rs  modeling.rs
rust/src/biomechanics/hydrostatics/: _3d.rs
rust/src/biomechanics/kinematics/: deformation.rs
rust/src/biomechanics/matlaw_general/: holzapfel_fiber.rs  planar_iso_linear.rs
rust/src/biomechanics/matlaw_scaled/: holzapfel_fiber.rs
rust/src/biomechanics/matlaw_uniaxial/: exponential.rs  linear.rs  neohookean.rs
rust/src/example/: arrays.rs
rust/src/fractional/: caputo.rs  caputo_data.rs  caputo_store.rs  derivative.rs  derivatives.rs  mod.rs  utils.rs
rust/src/fractional/caputo/: caputo_impl.rs  caputo_internal.rs  caputo_ndarray.rs  caputo_struct.rs  precomputed_data.rs
rust/src/fractional/caputo_store/: caputo_internal.rs  utils.rs
rust/src/fractional/derivative/: intermediates.rs  update.rs  utils.rs
rust/src/kinematics/: deformation.rs  invariants.rs  mod.rs
rust/src/linalg/: mod.rs
rust/src/linalg/optimization/: linear.rs
rust/src/pymodel/: neohookean.rs
rust/src/simulation/: pymodeling.rs  simulate.rs
rust/src/tests/: mod.rs
rust/src/tissues_1d/: aorta.rs  mod.rs  simulation.rs  simulation_1d.rs
rust/src/tissues_1d/aorta/: uniaxial_model.rs
rust/src/viscoelasticity/: derivatives.rs  maxwell_branch.rs  mod.rs  utils.rs
rust/src/viscoelasticity/caputo/: caputo_internal.rs  caputo_ndarray.rs
rust/src/viscoelasticity/maxwell_branch/: maxwell.rs
tests/: test_dummy.py  (+3 more)
(+33 files in other folders)
