[build-system]
requires = ["setuptools", "setuptools-rust"]
build-backend = "setuptools.build_meta"

[project]
name = "rustputo"
version = "0.1.2"
requires-python = ">=3.13"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = [
    "arraystubs@git+https://github.com/willwiz/arraystubs",
    "pytools@git+https://github.com/willwiz/pytools",
    "matplotlib",
    "numpy",
]
license-files = ["LICENSE"]

[tool.ruff.lint.extend-per-file-ignores]
"tests/test_*.py" = ["S101"]

[tool.setuptools.packages]
find = { where = ["src"] }
[[tool.setuptools-rust.ext-modules]]
target = "rustputo.models"
path = "rust/models/Cargo.toml"
binding = "PyO3"