[package]
name = "rustputo"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rustputo"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.25", features = ["extension-module"] }
numpy = "0.25"
ndarray = "0.16.1"
ndarray-linalg = { version = "0.17.0", features = ["intel-mkl-static"] }
refinement = "0.5.0"
